# retail

./: .gitignore  LICENSE  README.md  pyproject.toml  retail.py  sales_revenue.xlsx
.github/workflows/: validate-main.yml
docs/: index.html  qdox.css
